2011-03-26  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Force DumpRenderTree to use 96 DPI
        https://bugs.webkit.org/show_bug.cgi?id=56866

        Update GTK+ test results which now have differ.

        * platform/gtk/editing/pasteboard/4641033-expected.checksum:
        * platform/gtk/editing/pasteboard/4641033-expected.png:
        * platform/gtk/editing/pasteboard/4641033-expected.txt:
        * platform/gtk/editing/pasteboard/4944770-1-expected.checksum:
        * platform/gtk/editing/pasteboard/4944770-1-expected.png:
        * platform/gtk/editing/pasteboard/4944770-1-expected.txt:
        * platform/gtk/editing/pasteboard/4944770-2-expected.checksum:
        * platform/gtk/editing/pasteboard/4944770-2-expected.png:
        * platform/gtk/editing/pasteboard/4944770-2-expected.txt:
        * platform/gtk/editing/selection/caret-before-select-expected.checksum:
        * platform/gtk/editing/selection/caret-before-select-expected.png:
        * platform/gtk/editing/selection/caret-before-select-expected.txt:
        * platform/gtk/editing/selection/replaced-boundaries-3-expected.checksum:
        * platform/gtk/editing/selection/replaced-boundaries-3-expected.png:
        * platform/gtk/editing/selection/replaced-boundaries-3-expected.txt:
        * platform/gtk/editing/selection/select-box-expected.checksum:
        * platform/gtk/editing/selection/select-box-expected.png:
        * platform/gtk/editing/selection/select-box-expected.txt:
        * platform/gtk/editing/selection/select-element-paragraph-boundary-expected.checksum:
        * platform/gtk/editing/selection/select-element-paragraph-boundary-expected.png:
        * platform/gtk/editing/selection/select-element-paragraph-boundary-expected.txt:
        * platform/gtk/fast/block/float/float-avoidance-expected.checksum:
        * platform/gtk/fast/block/float/float-avoidance-expected.png:
        * platform/gtk/fast/block/margin-collapse/103-expected.checksum:
        * platform/gtk/fast/block/margin-collapse/103-expected.png:
        * platform/gtk/fast/forms/001-expected.checksum:
        * platform/gtk/fast/forms/001-expected.png:
        * platform/gtk/fast/forms/001-expected.txt:
        * platform/gtk/fast/forms/003-expected.checksum:
        * platform/gtk/fast/forms/003-expected.png:
        * platform/gtk/fast/forms/003-expected.txt:
        * platform/gtk/fast/forms/004-expected.checksum:
        * platform/gtk/fast/forms/004-expected.png:
        * platform/gtk/fast/forms/004-expected.txt:
        * platform/gtk/fast/forms/HTMLOptionElement_label01-expected.checksum:
        * platform/gtk/fast/forms/HTMLOptionElement_label01-expected.png:
        * platform/gtk/fast/forms/HTMLOptionElement_label01-expected.txt:
        * platform/gtk/fast/forms/HTMLOptionElement_label02-expected.checksum:
        * platform/gtk/fast/forms/HTMLOptionElement_label02-expected.png:
        * platform/gtk/fast/forms/HTMLOptionElement_label02-expected.txt:
        * platform/gtk/fast/forms/HTMLOptionElement_label03-expected.checksum:
        * platform/gtk/fast/forms/HTMLOptionElement_label03-expected.png:
        * platform/gtk/fast/forms/HTMLOptionElement_label03-expected.txt:
        * platform/gtk/fast/forms/HTMLOptionElement_label04-expected.checksum:
        * platform/gtk/fast/forms/HTMLOptionElement_label04-expected.png:
        * platform/gtk/fast/forms/HTMLOptionElement_label04-expected.txt:
        * platform/gtk/fast/forms/HTMLOptionElement_label06-expected.checksum:
        * platform/gtk/fast/forms/HTMLOptionElement_label06-expected.png:
        * platform/gtk/fast/forms/HTMLOptionElement_label06-expected.txt:
        * platform/gtk/fast/forms/HTMLOptionElement_label07-expected.checksum:
        * platform/gtk/fast/forms/HTMLOptionElement_label07-expected.png:
        * platform/gtk/fast/forms/HTMLOptionElement_label07-expected.txt:
        * platform/gtk/fast/forms/basic-selects-expected.checksum:
        * platform/gtk/fast/forms/basic-selects-expected.png:
        * platform/gtk/fast/forms/basic-selects-expected.txt:
        * platform/gtk/fast/forms/control-clip-overflow-expected.checksum:
        * platform/gtk/fast/forms/control-clip-overflow-expected.png:
        * platform/gtk/fast/forms/control-restrict-line-height-expected.checksum:
        * platform/gtk/fast/forms/control-restrict-line-height-expected.png:
        * platform/gtk/fast/forms/control-restrict-line-height-expected.txt:
        * platform/gtk/fast/forms/disabled-select-change-index-expected.checksum:
        * platform/gtk/fast/forms/disabled-select-change-index-expected.png:
        * platform/gtk/fast/forms/disabled-select-change-index-expected.txt:
        * platform/gtk/fast/forms/form-element-geometry-expected.checksum:
        * platform/gtk/fast/forms/form-element-geometry-expected.png:
        * platform/gtk/fast/forms/form-element-geometry-expected.txt:
        * platform/gtk/fast/forms/menulist-deselect-update-expected.checksum:
        * platform/gtk/fast/forms/menulist-deselect-update-expected.png:
        * platform/gtk/fast/forms/menulist-deselect-update-expected.txt:
        * platform/gtk/fast/forms/menulist-narrow-width-expected.checksum:
        * platform/gtk/fast/forms/menulist-narrow-width-expected.png:
        * platform/gtk/fast/forms/menulist-narrow-width-expected.txt:
        * platform/gtk/fast/forms/menulist-no-overflow-expected.checksum:
        * platform/gtk/fast/forms/menulist-no-overflow-expected.png:
        * platform/gtk/fast/forms/menulist-no-overflow-expected.txt:
        * platform/gtk/fast/forms/menulist-restrict-line-height-expected.checksum:
        * platform/gtk/fast/forms/menulist-restrict-line-height-expected.png:
        * platform/gtk/fast/forms/menulist-restrict-line-height-expected.txt:
        * platform/gtk/fast/forms/menulist-separator-painting-expected.checksum:
        * platform/gtk/fast/forms/menulist-separator-painting-expected.png:
        * platform/gtk/fast/forms/menulist-separator-painting-expected.txt:
        * platform/gtk/fast/forms/menulist-style-color-expected.checksum:
        * platform/gtk/fast/forms/menulist-style-color-expected.png:
        * platform/gtk/fast/forms/menulist-style-color-expected.txt:
        * platform/gtk/fast/forms/menulist-width-change-expected.checksum:
        * platform/gtk/fast/forms/menulist-width-change-expected.png:
        * platform/gtk/fast/forms/menulist-width-change-expected.txt:
        * platform/gtk/fast/forms/option-script-expected.checksum:
        * platform/gtk/fast/forms/option-script-expected.png:
        * platform/gtk/fast/forms/option-script-expected.txt:
        * platform/gtk/fast/forms/option-strip-whitespace-expected.checksum:
        * platform/gtk/fast/forms/option-strip-whitespace-expected.png:
        * platform/gtk/fast/forms/option-strip-whitespace-expected.txt:
        * platform/gtk/fast/forms/option-text-clip-expected.checksum:
        * platform/gtk/fast/forms/option-text-clip-expected.png:
        * platform/gtk/fast/forms/select-align-expected.checksum:
        * platform/gtk/fast/forms/select-align-expected.png:
        * platform/gtk/fast/forms/select-baseline-expected.checksum:
        * platform/gtk/fast/forms/select-baseline-expected.png:
        * platform/gtk/fast/forms/select-baseline-expected.txt:
        * platform/gtk/fast/forms/select-change-listbox-to-popup-expected.checksum:
        * platform/gtk/fast/forms/select-change-listbox-to-popup-expected.png:
        * platform/gtk/fast/forms/select-change-listbox-to-popup-expected.txt:
        * platform/gtk/fast/forms/select-dirty-parent-pref-widths-expected.checksum:
        * platform/gtk/fast/forms/select-dirty-parent-pref-widths-expected.png:
        * platform/gtk/fast/forms/select-dirty-parent-pref-widths-expected.txt:
        * platform/gtk/fast/forms/select-disabled-appearance-expected.checksum:
        * platform/gtk/fast/forms/select-disabled-appearance-expected.png:
        * platform/gtk/fast/forms/select-disabled-appearance-expected.txt:
        * platform/gtk/fast/forms/select-initial-position-expected.checksum:
        * platform/gtk/fast/forms/select-initial-position-expected.png:
        * platform/gtk/fast/forms/select-initial-position-expected.txt:
        * platform/gtk/fast/forms/select-selected-expected.checksum:
        * platform/gtk/fast/forms/select-selected-expected.png:
        * platform/gtk/fast/forms/select-selected-expected.txt:
        * platform/gtk/fast/forms/select-size-expected.checksum:
        * platform/gtk/fast/forms/select-size-expected.png:
        * platform/gtk/fast/forms/select-size-expected.txt:
        * platform/gtk/fast/forms/select-style-expected.checksum:
        * platform/gtk/fast/forms/select-style-expected.png:
        * platform/gtk/fast/forms/select-style-expected.txt:
        * platform/gtk/fast/forms/select-visual-hebrew-expected.checksum:
        * platform/gtk/fast/forms/select-visual-hebrew-expected.png:
        * platform/gtk/fast/forms/select-visual-hebrew-expected.txt:
        * platform/gtk/fast/forms/select-writing-direction-natural-expected.checksum:
        * platform/gtk/fast/forms/select-writing-direction-natural-expected.png:
        * platform/gtk/fast/forms/select-writing-direction-natural-expected.txt:
        * platform/gtk/fast/forms/stuff-on-my-optgroup-expected.checksum:
        * platform/gtk/fast/forms/stuff-on-my-optgroup-expected.png:
        * platform/gtk/fast/forms/stuff-on-my-optgroup-expected.txt:
        * platform/gtk/fast/html/keygen-expected.checksum:
        * platform/gtk/fast/html/keygen-expected.png:
        * platform/gtk/fast/html/keygen-expected.txt:
        * platform/gtk/fast/invalid/014-expected.checksum:
        * platform/gtk/fast/invalid/014-expected.png:
        * platform/gtk/fast/invalid/014-expected.txt:
        * platform/gtk/fast/invalid/residual-style-expected.txt:
        * platform/gtk/fast/parser/document-write-option-expected.checksum:
        * platform/gtk/fast/parser/document-write-option-expected.png:
        * platform/gtk/fast/parser/document-write-option-expected.txt:
        * platform/gtk/fast/replaced/replaced-breaking-expected.checksum:
        * platform/gtk/fast/replaced/replaced-breaking-expected.png:
        * platform/gtk/fast/replaced/replaced-breaking-expected.txt:
        * platform/gtk/fast/replaced/replaced-breaking-mixture-expected.checksum:
        * platform/gtk/fast/replaced/replaced-breaking-mixture-expected.png:
        * platform/gtk/fast/replaced/replaced-breaking-mixture-expected.txt:
        * platform/gtk/fast/replaced/three-selects-break-expected.checksum:
        * platform/gtk/fast/replaced/three-selects-break-expected.png:
        * platform/gtk/fast/replaced/three-selects-break-expected.txt:
        * platform/gtk/fast/replaced/width100percent-menulist-expected.checksum:
        * platform/gtk/fast/replaced/width100percent-menulist-expected.png:
        * platform/gtk/fast/replaced/width100percent-menulist-expected.txt:
        * platform/gtk/fast/text/international/bidi-menulist-expected.checksum:
        * platform/gtk/fast/text/international/bidi-menulist-expected.png:
        * platform/gtk/fast/text/international/bidi-menulist-expected.txt:
        * platform/gtk/fast/text/international/pop-up-button-text-alignment-and-direction-expected.checksum:
        * platform/gtk/fast/text/international/pop-up-button-text-alignment-and-direction-expected.png:
        * platform/gtk/fast/text/international/pop-up-button-text-alignment-and-direction-expected.txt:
        * platform/gtk/http/tests/navigation/javascriptlink-frames-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug1188-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug1188-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug1188-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug18359-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug18359-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug18359-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug2479-3-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug2479-3-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug2479-3-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug2479-4-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug29326-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug29326-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug29326-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug33855-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug33855-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug33855-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug4382-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug4382-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug4382-expected.txt:
        * platform/gtk/tables/mozilla/bugs/bug96334-expected.checksum:
        * platform/gtk/tables/mozilla/bugs/bug96334-expected.png:
        * platform/gtk/tables/mozilla/bugs/bug96334-expected.txt:
        * platform/gtk/tables/mozilla/core/margins-expected.checksum:
        * platform/gtk/tables/mozilla/core/margins-expected.png:
        * platform/gtk/tables/mozilla/core/margins-expected.txt:
        * platform/gtk/tables/mozilla/dom/tableDom-expected.checksum:
        * platform/gtk/tables/mozilla/dom/tableDom-expected.png:
        * platform/gtk/tables/mozilla/dom/tableDom-expected.txt:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug2479-5-expected.checksum:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug2479-5-expected.png:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug2479-5-expected.txt:
        * platform/gtk/transforms/2d/zoom-menulist-expected.checksum:
        * platform/gtk/transforms/2d/zoom-menulist-expected.png:
        * platform/gtk/transforms/2d/zoom-menulist-expected.txt:
2011-03-23  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Force DumpRenderTree to use 96 DPI
        https://bugs.webkit.org/show_bug.cgi?id=56866

        Make sure that GTK+ is set to use 96 DPI when running tests. This ensures
        broader compatibility with WebKit2 and makes setting font sizes more straightforward.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (initializeGtkFontSettings): Set the screen resolution and GTK+ xft property to 96 DPI.
        (resetDefaultsToConsistentValues):Remove the call which repeatedly set the GDK screen resolution.
        (setDefaultsToConsistentStateValuesForTesting): Update the font sizes to reflect the new DPI.

Canonical link: https://commits.webkit.org/71838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82033 268f45cc-cd09-0410-ab3c-d52691b4dbfc